@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclMacChan.c,v 1.13 2002/02/15 14:28:49 dkf Exp $
+ * RCS: @(#) $Id: tclMacChan.c,v 1.14 2002/05/20 10:22:33 das Exp $
  */
 
 #include "tclInt.h"
@@ -25,6 +25,12 @@
 #include <MoreFiles.h>
 #include <MoreFilesExtras.h>
 
+#ifdef __MSL__
+#include <unix.mac.h>
+#define TCL_FILE_CREATOR (__getcreator(0))
+#else
+#define TCL_FILE_CREATOR 'MPW '
+#endif
 
 /*
  * The following are flags returned by GetOpenMode.  They
@@ -858,7 +864,7 @@ OpenFileChannel(
     }
 
     if ((err == fnfErr) && (mode & TCL_CREAT)) {
-	err = HCreate(fileSpec.vRefNum, fileSpec.parID, fileSpec.name, 'MPW ', 'TEXT');
+	err = HCreate(fileSpec.vRefNum, fileSpec.parID, fileSpec.name, TCL_FILE_CREATOR, 'TEXT');
 	if (err != noErr) {
 	    *errorCodePtr = errno = TclMacOSErrorToPosixError(err);
 	    Tcl_SetErrno(errno);
